<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context="com.example.ace.vary.SignUpFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mainSignUp"
        android:textSize="40sp"
        android:id="@+id/signup"
        android:layout_gravity="center"
        android:textColor="#000"
        />
    <EditText
        android:layout_width="300dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:hint="@string/mainUserId"
        android:id="@+id/signupUserId"
        />
    <EditText
        android:layout_width="300dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:hint="@string/mainEnterName"
        android:id="@+id/signupName"
        />

    <EditText
        android:id="@+id/signupEmail"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/mainEmail"
        android:inputType="textWebEmailAddress" />
    <EditText
        android:layout_width="300dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:hint="@string/mainPassword"
        android:id="@+id/signPass"
        />
    <EditText
        android:layout_width="300dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:hint="@string/mainRePassword"
        android:id="@+id/signPassre"
        />
    <Spinner
        android:id="@+id/loginSpinner"
        android:layout_width="368dp"
        android:layout_height="wrap_content"/>
    <Button
        android:layout_width="200dp"
        android:layout_gravity="center"
        android:id="@+id/sign"
        android:text="@string/mainSignUp"
        android:layout_height="wrap_content" />

</LinearLayout>
