<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView

    xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="24dp"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/recUsrName"
            android:paddingLeft="30dp"
            android:layout_marginTop="16dp"
            android:paddingRight="20dp"
            android:textColor="#212020"
            android:textSize="30sp"
            android:text="@string/username"
            />

        <ImageView
            android:layout_width="match_parent"
            android:layout_marginTop="30dp"
            android:layout_height="230dp"
            android:scaleType="centerCrop"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:id="@+id/recImg"
            android:src="@drawable/photo"
            android:contentDescription="@string/app_name"
            />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:layout_marginTop="20dp"
            android:textColor="#615f5f"
            android:textSize="18sp"
            android:id="@+id/recUsrTitle"
            android:text="@string/description"
            android:layout_marginBottom="20dp"
            />

    </LinearLayout>


</android.support.v7.widget.CardView>
